[metadata]
name = tmotor-python-can-lib
version = 0.1.0
author = John Z. Zhang
author_email = johnz@mit.edu
description = A Python Driver for the T-Motor AK64-80 module using SocketCAN for communication.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnzzhang/tmotor-python-can-lib
project_urls =
    Bug Tracker = https://github.com/johnzzhang/tmotor-python-can-lib/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Framework :: Robot Framework :: Tool
    Topic :: System :: Hardware :: Hardware Drivers

[options]
package_dir =
    = src
packages = motor_driver
python_requires = >=3.6
install_requires = 
    bitstring

[options.packages.find]
where = src